# ExaWord

./: LICENSE  README.md  index.html  style.css
assets/: index.html  style.css
assets/js/: caret.js  editor.js  file-JSON.js  file-XML.js  status-bar.js
resource/: editor.js  index.html  style.css
src/: index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/js/: file.js  text-input.js  window.js
