[package]
name = "exaword"
version = "0.1.0"
description = "Minimalist rich text editor"
authors = ["JiroBlade"]
license = "MIT"
repository = "https://github.com/JiroBlade/ExaWord"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["dialog-all", "window-all"] }
window-shadows = "0.2.1"
winit = "0.27.5"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[dependencies.windows]
version = "0.44.0"
features = [
    "Data_Xml_Dom",
    "Foundation",
    "Storage"
]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
